<resources>
    <string name="app_name">OffTrail</string>
    <string name="msg_splash">Carregando ...</string>
    <string name="tx_sair">Sair</string>
    <string name="tx_entrar">Entrar</string>
    <string name="tx_senha">Senha</string>
    <string name="tx_login">Login</string>
    <string name="title_activity_main">OffTrail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tx_nome">Nome</string>
    <string name="tx_idade">Idade</string>
    <string name="tx_cancelar">Cancelar</string>
    <string name="tx_salvar">Salvar</string>
    <string name="msg_about">About</string>
    <string name="tx_backtomainscreen">Back to the main screen</string>
    <string name="text_about">Offtrail é um aplicativo para gerenciar, trilheiros e seus grupos de trilha de uma forma fácil e rápida facilitando a identificação de cada um.</string>
    <string name="tx_versao">Versão:</string>
    <string name="vl_versao">1.0</string>
    <string name="tx_mensagem_boas_vindas">Mensagem de Boas-Vindas</string>
</resources>
