<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <Button
        android:id="@+id/bt_sair"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="216dp"
        android:onClick="sair"
        android:text="@string/tx_sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="216dp"
        android:onClick="entrar"
        android:text="@string/tx_entrar"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/tx_login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/tx_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLogin" />
</android.support.constraint.ConstraintLayout>